# NAD_ML_models

./: .gitignore  Makefile  README.md  anomaly_detection.py  cnn.py  cnn_features.py  cnn_layers.py  cnn_units.py  environment.yml  execution_engine.py  framework_parameters.py  logger.py  lstm.py  lstm_features.py  lstm_hp.sh  lstm_layers.py  lstm_units.py  manager.py  mlp.py  mlp_epoch.py  mlp_features.py  mlp_hp.sh  mlp_layers.py  mlp_neurons.py  playground.py  plotter.py  preprocess_data.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
components/: manager.py
components/tests/: test_manager.py
data_structures/: framework_parameters.py
eppnad/: energy_monitor.py  execution_engine.py  framework_parameters.py  logger.py  manager.py  plotter.py  requirements.txt
eppnad/core/: energy_monitor.py  execution_engine.py  manager.py  plotter.py
eppnad/tests/: test_execution_engine.py  test_manager.py
eppnad/utils/: configurations.py  execution_configuration.py  execution_result.py  (+4 more)
eppnad_notes/: eppnad Planning.md
examples/: basic_example.py  basic_example_ids_2018.py  basic_example_intermittent.py  basic_example_timer.py  hooshmand_cnn.py  naseer_lstm.py
legacy_repo/: preprocess_data.py
models/: cnn_train.py  lstm_test.py  lstm_train.py  mlp.py  mlp_test.py  mlp_train.py  scaffold.py
tests/: test_energy_monitor.py  test_execution_configuration.py  test_execution_engine.py  test_framework_parameters.py  test_manager.py  test_model_execution_config.py  test_plotter.py  test_result_writer.py  test_runtime_snapshot.py
(+24 files in other folders)
