# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eppnad"
version = "0.0.1"
authors = [
  { name="Tiago Schmidt", email="68293535+tiagotschmidt@users.noreply.github.com" },
]
description = "Energy and Performance Profiler for Network Anomaly Detection."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]